[package]
name = 'pallet-nolik'
version = '0.1.0-dev'
description = 'Substrate FRAME pallet for communication between accounts.'
authors = ['Chainify <https://github.com/chainify>']
edition = '2021'
license = 'Apace 2.0'
publish = false
repository = 'https://github.com/chainify/pallet-nolik/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'devhub/latest'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'devhub/latest'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'devhub/latest'
version = '4.0.0-dev'

[features]
default = ['std']
std = [
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
]
try-runtime = ['frame-support/try-runtime']
